yoga and sound overflow fixed

--- a/frontend/src/styles/_home_4-offer-modal.scss
+++ b/frontend/src/styles/_home_4-offer-modal.scss
@@ -299,7 +299,7 @@
 .modal-checklist {
 	&--event {
 		grid-column: 1 / -1;
-		width: max-content;
+		// width: max-content;
 	}
 	&__list {
 		@extend .modal__list;
